--- a/signin.html
+++ b/signin.html
@@ -85,7 +85,7 @@
           alert(`${form.target.email.value} Logged In Successfully!`);
           User.login(form.target.email.value, form.target.password.value);
           setTimeout(
-            location.href = "https://intez-banking.netlify.app/dashboard.html",
+            location.href = "intez-bankings.on.fleek.co/dashboard.html",
             3000
           );
           return true;
